Stubs for work, fetch and checks.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,30 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <style>
+* {
+webkit-box-sizing: border-box;
+moz-box-sizing: border-box;
+box-sizing: border-box;
+}
+
+body {
+background: white;
+font-size: 16px;
+}
+
+#app {
+border: solid thin red;
+margin: 0 auto;
+width: 80%;
+}
+    
+    </style>
     <title>fugr-ru-test</title>
   </head>
   <body>
     <div id="app"></div>
+    <div id="test"></div>
     <!-- built files will be auto injected -->
     <script src="dist/main.js"></script>
   </body>
